--- a/styles/styleIndex.css
+++ b/styles/styleIndex.css
@@ -1,61 +1,127 @@
 *{
     padding: 0;
     margin: 0;
+    
     box-sizing: border-box;
 }
-body{
-    background-color: #dedede;
-    font-family: Century Gothic;
-    min-height: 100vh;
-    padding: 10px;
-}
-.bodyM > * {
-   
-    text-align: center;
-    font-weight: 500;
-}
-.bodyM{
-    display: grid;
-    gap: 20px;
-    grid-template: 
-    "header" 70px
-    "main" 200px
-    "late" 120px
-    "foot" 70px
-    ;
 
-    .main{
-        grid-area: "Main";
-        background-color: #88fe;
-
-    }
-    .mainheader{
-        grid-area: "header";
-        background-color: #5382B0;
-    }
-    .late{
-        grid-area: "late";
-        background-color: #486E98;
-    }
-    .foot{
-        grid-area: "foot";
-        background-color: #7F0200;
-    }
-
-    @media (min-width:944px) {
-        grid-area: 
-        "header header header" 70px
-        "main main late" 100px
-        "foot foot foot" 80px/
-        100px auto 200px        
-        
-        ;
-    }
-    
 
 /*#5382B0
 #486E98
 #7F0200
 */
 
+
+
+body{
+    background-color: #dedede;
+    font-family: Century Gothic;
+
+}
+.bodyM > * {
+   
+    text-align: center;
+    font-weight: 500; 
+}
+
+.mainheader{
+    background-color:#2121b9 ;
+    padding: 20px;
+    border-radius: 5px;
+    margin: 10px 10px;
+     .titlesOne{
+        color: #fff;
+        font-family: "Oswald";
+        font-weight: 400;
+        font-size: 40px;
+        padding: 10px;
+    }
+
+}
+.mainContainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 90%;
+    gap: 20px;
+    margin: 0 auto;
+    .ContenedorPrinci{
+        grid-column: 1/3;
+        background-color:#222180;
+        padding:10px;
+        h2{
+            text-align: left;
+        }
+        p{
+            color:#fff;
+            font-size: 22px;
+            font-family: "Montserrat Alternates", sans-serif;
+        text-align: justify;
+        }
+
+        
+    }
+    .late div nav li{
+       
+        list-style: none;
+        list-style: none;
+       a{
+        color:white;
+        text-decoration: none;
+        line-height: 10px;
+       }
+    }
+
+    .late{
+        grid-column: 3;
+        padding: 10px;
+        background-color: #071952;
+    }
+  
+}
+.monito{
+    float: right;
+    width: 300px;
+    height: 200px;
+}
+
+
+.a{
+    background-color: #071952;
+    background-color: #088395;
+    background-color: #37B7C3;
+    background-color: #1B1A55;
+    background-color: #36C2CE;
+
+}
+.foot{
+    display: grid;
+    background-color: #071952;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr;
+     
+    top :260px;
+    position: relative;
+    padding: 10px;
+}
+.foot ul{
+   grid-column: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+   
+   
+}
+.foot ul li  a{
+    text-decoration: none;
+    list-style: none;
+    margin: 5px;
+    color:#fff;}
+.foot ul li{
+    list-style-type: none;
+}
+.foot img{
+    grid-column: 2;
+    width: 1000px;
+    height: 100px;
+    margin: 0 auto;
 }
